Update footer copyright text

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
       <div class="footer-bottom">
         <div class="copyright">
-          © 2025 INSTITUTO IGEDUC - Todos os direitos reservados
+          © 2025 INSTITUTO IGEDUC - Desenvolvido por SolonDev
         </div>
         <a href="#">
           <img src="https://via.placeholder.com/150x50/1a3cc9/ffffff?text=Reclame+Aqui" alt="Reclame Aqui"
